# open-sqlui

./: .gitignore  README.md  pyproject.toml
src/open_sqlui/: __init__.py  app.py  cli.py
src/open_sqlui/core/: config.py  db_client.py  repository.py
src/open_sqlui/services/: database_service.py  export_service.py  file_browser.py  table_service.py
tests/: test_db_client.py
